[gd_scene load_steps=5 format=4 uid="uid://cvadcalsore2n"]

[ext_resource type="PackedScene" uid="uid://dxu4nl0muu0rr" path="res://Prefab/Npc/NpcBase.tscn" id="1"]
[ext_resource type="Script" uid="uid://ds74rxg232m35" path="res://Prefab/Npc/CrazyDave/NpcCrazyDave.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://wjqh10cu7js2" path="res://Asset/Anime/Npc/CrazyDave/CrazyDave.tscn" id="3"]
[ext_resource type="Script" uid="uid://b6lojhfkgvhsw" path="res://addons/AdobeAnimateEditor/Node/AdobeAnimateSlot.gd" id="4"]

[node name="NpcCrazyDave" node_paths=PackedStringArray("sprite") instance=ExtResource("1")]
script = ExtResource("2")
sprite = NodePath("CrazyDave")

[node name="CrazyDave" parent="." index="0" instance=ExtResource("3")]
unique_name_in_owner = true
light_mask = 0
timeScale = 0.8
Animation/Clip = "IdleHanding"

[node name="HandSlot" type="Node2D" parent="CrazyDave" index="0"]
unique_name_in_owner = true
light_mask = 0
position = Vector2(142.772, 433.679)
rotation = -0.0264781
scale = Vector2(0.996913, 0.996913)
script = ExtResource("4")
followSlotId = 43
offset = Vector2(-5, -25)
metadata/_custom_type_script = "uid://b6lojhfkgvhsw"

[node name="ShoulderSlot" type="Node2D" parent="CrazyDave" index="1"]
unique_name_in_owner = true
light_mask = 0
position = Vector2(-31.5292, 325.221)
rotation = 0.00589756
scale = Vector2(0.999936, 1.00796)
skew = -0.000223756
script = ExtResource("4")
followSlotId = 18
offset = Vector2(23, 100)
metadata/_custom_type_script = "uid://b6lojhfkgvhsw"

[node name="HeadSlot" type="Node2D" parent="CrazyDave" index="2"]
unique_name_in_owner = true
light_mask = 0
position = Vector2(66.4899, 92.2265)
rotation = -0.0201269
scale = Vector2(1.03241, 1.0077)
skew = -4.11272e-05
script = ExtResource("4")
followSlotId = 28
offset = Vector2(55, -7)
metadata/_custom_type_script = "uid://b6lojhfkgvhsw"
